Updates resources and timeline

--- a/index.html
+++ b/index.html
@@ -301,13 +301,13 @@
       </a>
       <h1>Project Tracking</h1>
       <div class="subtitle">
-        <span class="meta-label"> Project owner/leader:</span> xxxxxxxx · <span class="meta-label">IDS Area owner:</span> xxxxxxxx
+        <span class="meta-label">IDS Area owner:</span> Hanna Kultima, Lars Feuk, Annika Jenmalm-Jensen · <span class="meta-label"> Project leaders:</span> Moa Borén, Wojtek Potrzebowski
       </div>
       <div class="meta-row" style="margin-top: 0.5rem;">
-        <div><span class="meta-label">Ready:</span> 261231</div>
+        <div><span class="meta-label">Ready:</span> TBD</div>
         <div>
           <span class="meta-label">Resources:</span>
-          XX DC staff + 0.1 FTE per unit (NBIS DM?)
+          TBD
         </div>
       </div>
     </header>
@@ -370,57 +370,57 @@
             </thead>
             <tbody>
               <tr data-activity="Confirm pilot scope and collaboration model with selected units.">
-                <td>Jan 2026</td>
+                <td>TBD</td>
                 <td class="activity-cell">Confirm pilot scope and collaboration model with selected units.</td>
                 <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
               </tr>
               <tr data-activity="Introduce concepts and collect insights about success criteria and pitfalls">
-                <td>Jan–Feb 2026</td>
+                <td>TBD</td>
                 <td class="activity-cell">Introduce concepts and collect insights about success criteria and pitfalls</td>
                 <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
               </tr>
               <tr data-activity="Initial UX concept and key mock-ups for user, staff and management views agreed with pilot units.">
-                <td>Feb–Mar 2026</td>
+                <td>TBD</td>
                 <td class="activity-cell">Initial UX concept and key mock-ups for user, staff and management views agreed with pilot units.</td>
                 <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
               </tr>
               <tr data-activity="Testing and evaluation with users and staff.">
-                <td>Mar 2026</td>
+                <td>TBD</td>
                 <td class="activity-cell">Testing and evaluation with users and staff</td>
                 <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
               </tr>
               <tr data-activity="Define MVP architecture, APIs, notification strategy, logging and hosting approach.">
-                <td>Apr 2026</td>
+                <td>TBD</td>
                 <td class="activity-cell">Define MVP architecture, APIs, notification strategy, logging and hosting approach.</td>
                 <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
               </tr>
               <tr data-activity="Build pilot: core web app for users and staff plus initial integrations (IAM, identifiers).">
-                <td>Apr–Jul 2026</td>
+                <td>TBD</td>
                 <td class="activity-cell">Build pilot: core web app for users and staff plus initial integrations (IAM, identifiers).</td>
                 <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
               </tr>
               <tr data-activity="Pilot-ready release and onboarding of first units.">
-                <td>Jul 2026</td>
+                <td>TBD</td>
                 <td class="activity-cell">Pilot-ready release and onboarding of first units.</td>
                 <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
               </tr>
               <tr data-activity="Mid-pilot evaluation and improvements.">
-                <td>Aug 2026</td>
+                <td>TBD</td>
                 <td class="activity-cell">Mid-pilot evaluation and improvements.</td>
                 <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
               </tr>
               <tr data-activity="Roll-out to additional units.">
-                <td>Sep–Oct 2026</td>
+                <td>TBD</td>
                 <td class="activity-cell">Roll-out to additional units.</td>
                 <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
               </tr>
               <tr data-activity="Final evaluation and next-phase recommendation.">
-                <td>Nov 2026</td>
+                <td>TBD</td>
                 <td class="activity-cell">Final evaluation and next-phase recommendation.</td>
                 <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
               </tr>
               <tr data-activity="Launch of Project Tracking as a SciLifeLab service.">
-                <td>Dec 2026</td>
+                <td>TBD</td>
                 <td class="activity-cell">Launch of Project Tracking as a SciLifeLab service.</td>
                 <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
               </tr>
