--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
       </a>
       <h1>Project Tracking</h1>
       <div class="subtitle">
-        <span class="meta-label">IDS Area owner:</span> Hanna Kultima, Lars Feuk, Annika Jenmalm-Jensen · <span class="meta-label"> Project leaders:</span> Moa Borén, Wojtek Potrzebowski
+        <span class="meta-label">IDS Area owner:</span> Hanna Kultima, Lars Feuk · <span class="meta-label"> Project leaders:</span> Moa Borén, Wojtek Potrzebowski
       </div>
       <div class="meta-row" style="margin-top: 0.5rem;">
         <div><span class="meta-label">Ready:</span> TBD</div>
