--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
             <tbody>
               <tr data-activity="Confirm pilot scope and collaboration model with selected units.">
                 <td>TBD</td>
-                <td class="activity-cell">Confirm pilot scope and collaboration model with selected units.</td>
+                <td class="activity-cell">Confirm pilot scope and collaboration model with selected units, team and IDS Area owners.</td>
                 <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
               </tr>
               <tr data-activity="Introduce concepts and collect insights about success criteria and pitfalls">
@@ -421,7 +421,7 @@
               </tr>
               <tr data-activity="Launch of Project Tracking as a SciLifeLab service.">
                 <td>TBD</td>
-                <td class="activity-cell">Launch of Project Tracking as a SciLifeLab service.</td>
+                <td class="activity-cell">Launch of Project Tracking as a SciLifeLab service and deliver playbook for further attachment of units.</td>
                 <td class="status-cell"><span class="milestone-status-badge">Loading…</span></td>
               </tr>
             </tbody>
